--- a/Callcenter/Views/Frame/Add.cshtml
+++ b/Callcenter/Views/Frame/Add.cshtml
@@ -72,7 +72,7 @@
                     else
                     {
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)" checked>
+                            <input class="form-check-input" type="radio" name="request" id="@((int)er)" value="@((int)er)">
                             <label class="form-check-label" for="@((int)er)">
                                 @er.ToString()
                             </label>
