--- a/Callcenter/Views/Shared/_Layout.cshtml
+++ b/Callcenter/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - gemeinsam.online</title>
+    <title>@ViewData["Title"] - Gemeinschaft.Online</title>
     <link rel="stylesheet" type="text/css" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="~/css/site.css" />
     <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
@@ -43,7 +43,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Callcenter - gemeinsam.online
+            &copy; 2020 - Callcenter - Gemeinschaft.Online
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
