--- a/Callcenter/Views/Home/Index.cshtml
+++ b/Callcenter/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         <div class="d-md-flex align-items-center h-100 text-center justify-content-center">
             <div class="logoarea pb-5">
                 <div class="text-center">
-                    <h1 class="display-4">Callcenter gemeinsam.online</h1>
+                    <h1 class="display-4">Callcenter Gemeinschaft.Online</h1>
                 </div>
                 <div id="tablespace">
                     <table style="width: 100% " id="entries">
