--- a/Callcenter/Views/Shared/_Layout.cshtml
+++ b/Callcenter/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <script src="~/lib/font-awesome/js/all.js"></script>
     <script src="~/js/signalr/dist/browser/signalr.js"></script>
 </head>
-<body onbeforeunload="return bevorunload()">
+<body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
