--- a/Callcenter/Views/Shared/_Layout.cshtml
+++ b/Callcenter/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,6 +30,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Alle" asp-action="Index">Alle</a>
                         </li>
+                        @*<li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Organization" asp-action="Index">Organization</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Organization" asp-action="Add">Organization Hinzufügen</a>
+                        </li>*@
                     </ul>
                 </div>
             </div>
@@ -42,8 +48,11 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div id="footfield" class="container">
             &copy; 2020 - Callcenter - Gemeinschaft.Online
+        </div>
+        <div id="InfoWindow" class="newEntry non-visible container alert-info" role="alert">
+            <i class="fas baby" title="Info"></i>  Neuer Eintrag verfügbar
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
