--- a/Callcenter/Views/Shared/_BlankLayout.cshtml
+++ b/Callcenter/Views/Shared/_BlankLayout.cshtml
@@ -8,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="~/css/site.css" />
     <link rel="stylesheet" type="text/css" href="~/lib/font-awesome/css/all.css" />
     <script src="~/lib/font-awesome/js/all.js"></script>
-    <script src="~/js/signalr/dist/browser/signalr.js"></script>
 </head>
 <body>
     <div class="container">
@@ -19,7 +18,7 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/frame.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
