--- a/Callcenter/Views/Frame/Send.cshtml
+++ b/Callcenter/Views/Frame/Send.cshtml
@@ -48,7 +48,7 @@
                 }
             }
         </div>
-        <input type="submit" value="Submit" disabled>
+        <input type="submit" value="Absenden" disabled>
     </form>
     <br />
     <div id="requestFinish" class="popup alert-success" role="alert">
