--- a/Callcenter/Views/Frame/Add.cshtml
+++ b/Callcenter/Views/Frame/Add.cshtml
@@ -111,8 +111,9 @@
             }
         </div>
         <div class="form-group">
-            <img src="/Frame/Captcha/@ViewData["captchaid"]" alt="Captcha Picture" /><span class="alert-light">Bitte tippen Sie die Zeichen in dem farbigen Kästchen ab, bevor Sie auf Senden klicken.</span><br>
+            <img src="/Frame/Captcha/@ViewData["captchaid"]" alt="Captcha Picture" /><br>
             <input class="form-control input-lg test" type="text" id="captchasecret" name="captchasecret" onchange="valiCaptcha();" value="" required><br>
+            <span class="alert-light">Bitte tippen Sie die Zeichen in dem farbigen Kästchen ab, bevor Sie auf Senden klicken.</span><br>
         </div>
         <input type="submit" value="Absenden">
     </form>
