--- a/Callcenter/Views/Frame/Add.cshtml
+++ b/Callcenter/Views/Frame/Add.cshtml
@@ -112,7 +112,7 @@
         </div>
         <div class="form-group">
             <img src="/Frame/Captcha/@ViewData["captchaid"]" alt="Captcha Picture" /><br>
-            <input class="form-control input-lg test" type="text" id="captchasecret" name="captchasecret" onchange="valiCaptcha();" value="" required><br>
+            <input class="form-control input-lg test" type="text" id="captchasecret" name="captchasecret" onchange="valiCaptcha();" style="width: 130px;" value="" required><br>
             <span class="alert-light">Bitte tippen Sie die Zeichen in dem farbigen Kästchen ab, bevor Sie auf Senden klicken.</span><br>
         </div>
         <input type="submit" value="Absenden">
